--- a/SoulIT_WebSite/SoulIT_WebSite.csproj
+++ b/SoulIT_WebSite/SoulIT_WebSite.csproj
@@ -133,6 +133,9 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Img\Slide3.JPG" />
+    <Content Include="Img\Slide4.JPG" />
+    <Content Include="Img\Slide5.JPG" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
